@@ -1,3 +1,11 @@
+Thu Sep  8 11:29:00 2016  Kenta Murata  <mrkn@mrkn.jp>
+
+	* hash.c (rb_hash_transform_values, rb_hash_transform_values_bang):
+	  Rename map_v to transform_values.
+	  [Feature #12512] [ruby-core:76095]
+
+	* test/ruby/test_hash.rb: ditto.
+
 Thu Sep  8 10:08:35 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* {ext,test}/openssl: Import Ruby/OpenSSL 2.0.0.beta.2. The full commit
